--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,23 @@
 	box-sizing: border-box;
 	margin: 10px;
 }
+
+body {
+	width: 100%;
+	height: 100%;
+	margin: 0; 
+	text-align: center; 
+	background-position: center center;
+}
+
+.background1 {
+background-image: url(../images/triangle_pattern_orange.svg);
+}
+
+.background2 {
+background-image: url(../images/triangle_pattern_blue.svg);
+}
+
+.background3 {
+background-image: url(../images/triangle_pattern_pink.svg);
+}
