--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,142 @@
 * {
 	box-sizing: border-box;
-	margin: 10px;
+}
+
+#background {
+	width: 100%;
+	height: 100%; 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 body {
 	width: 100%;
-	height: 100%;
-	margin: 0; 
-	text-align: center; 
-	background-position: center center;
+	background: #40E0D0; 
+    background: -webkit-linear-gradient(to right, #FF0080, #FF8C00, #40E0D0);  
+    background: linear-gradient(to right, #FF0080, #FF8C00, #40E0D0); 
+    font-family: "Lobster", "Helvetica", sans-serif;
 }
 
-.background1 {
-background-image: url(../images/triangle_pattern_orange.svg);
+
+#overall-container {
+	width: 75%;
+	margin-left: 30px;
+	margin-right: 30px;
+	margin-top: 30px;
+	padding-left: 20px;
+	padding-right: 20px;
+	padding-top: 20px;
+	display: table;
+	margin: auto;
+    text-align: center;
 }
 
-.background2 {
-background-image: url(../images/triangle_pattern_blue.svg);
+header {
+	margin: 20px;
+	padding: 10px;
 }
 
-.background3 {
-background-image: url(../images/triangle_pattern_pink.svg);
+h1 {
+    font-family: "Lobster", "Helvetica", sans-serif;
+    font-size: 96px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.mask-galaxy {
+    background: url(https://naldzgraphics.net/wp-content/uploads/2013/03/22-colorful-beautiful-stained-glass-textures.jpg) center center;
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    -webkit-animation: travelGalaxy 10s linear infinite;
+    -moz-animation: travelGalaxy 10s linear infinite;
+    -moz-text-fill-color: transparent;
+    -moz-background-clip: text;
+    -moz-animation: travelGalaxy 10s linear infinite;
+    -o-text-fill-color: transparent;
+    -o-background-clip: text;
+    -o-animation: travelGalaxy 10s linear infinite;
+}
+
+@-webkit-keyframes travelGalaxy {
+    0% {background-position: right bottom;}
+    100% {background-position: left top;}
+}
+@-moz-keyframes travelGalaxy {
+    0% {background-position: right bottom;}
+    100% {background-position: left top;}
+}
+
+.button {
+	display: inline-block;
+	cursor: crosshair; 
+    border: 3px solid transparent;
+    border-image: linear-gradient(to right, #f4a041 0%, #f4416a 100%);
+    border-image-slice: 1;
+ 	font-family: "Lobster", "Helvetica", sans-serif;
+	font-size: 16px;
+    background: rgba(255, 255, 255, 0.4);;
+    color: #0d5f72;
+    font-size: 1em;
+    padding: 10px;
+    margin: 10px;
+}
+
+.button:hover {
+    background-color: rgba(255, 255, 255, 0.2);;
+    background: linear-gradient(to right, #f4416a, #f4a041);
+    color: #fff;
+}
+
+.button:active {
+	border-image: linear-gradient(to right, #7cffc4 0%, #09a3c6 100%);
+    background-color: rgba(255, 255, 255, 0.2);;
+    background: linear-gradient(to right, #09a3c6, #09a3c6);
+    color: #fff;
+}
+
+form {
+	padding: 10px;
+
+}
+
+label {
+	margin: 10px;
+	font-size: 18px;
+	float: left;
+}
+
+#new-input {
+	margin: 10px;
+	font-size: 18px;
+	float: left;
+	clear: both;
+}
+
+#new-input:hover {
+	cursor: text;
+}
+
+#add-new {
+	font-size: 16px;
+	float: left;
+}
+
+#giphys-view {
+	padding: 10px;
+  	margin: 10px;
+}
+
+
+#gifs-here {
+	padding: 10px;
+  	margin: 10px;
+}
+
+.p {
+	float: left;
+}
+
+.gif {
+	float: left;
 }
