--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,48 @@ label {
 }
 
 .gif-container {
-    padding: 15px;
+    padding: 20px;
     display: inline-block;
+    margin: 10px;
+    top: 0;
+}
+
+.gif {
+    padding: 20px;
+}
+
+.grow:hover {
+    -webkit-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    transform: scale(1.3);
+}
+
+
+.shake:active {
+    animation: shake .5s ease-in-out;
+}
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+
+  20% {
+    transform: translateX(-10px);
+  }
+
+  40% {
+    transform: translateX(10px);
+  }
+
+  60% {
+    transform: translateX(-10px);
+  }
+
+  80% {
+    transform: translateX(10px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
 }
