--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,11 +141,13 @@ label {
     text-align: center;
     position: relative;
     margin: 0 auto;
+    margin-left: -15px;
+    margin-right: -15px;
 }
 
 .rating-container {
     color: black;
-    text-shadow: 2px 2px 5px #5A6063;
+    text-shadow: 2px 2px 5px rgb(128, 134, 134);
     background: white;
     letter-spacing: 2px;
     padding: 5px;
@@ -156,12 +158,14 @@ label {
 .gif-container {
     padding: 20px;
     display: inline-block;
-    margin: 10px;
     top: 0;
+    margin: 10px;
 }
 
 .gif {
     padding: 20px;
+    width: 400px;
+    height: 250px;
 }
 
 .grow:hover {
